# my_mlops_project

./: pyproject.toml
.github/workflows/: ci-build.yaml
backend/: README.md  app.py  pyproject.toml  requirements.txt
backend/src/: __init__.py
backend/src/data/: make_dataset.py
backend/src/features/: build_features.py
backend/src/models/: predict_model.py  train_model.py
backend/src/visualization/: visualize.py
frontend/: app.py  pyproject.toml
src/: __init__.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: predict_model.py  train_model.py
src/visualization/: visualize.py
