[project]
name = "my_mlops_project"
version = "0.1.0"
description = "Reproducible ML project scaffold powered by uv"
readme = "README.md"
requires-python = ">= 3.12"
authors = [{ name = "Mirali44", email = "azeeli2005@gmail.com" }]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pandas>=2.1.4",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.2",
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.black]
line-length = 100
extend-exclude = '^(data|reports|models|notebooks)/'

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
src_paths = ["src"]
extend_skip = ["data", "reports", "models", "notebooks"]